[package]
name = "hello_world"
version = "0.1.0"
edition = "2021"

[dependencies]
rustdds = "0.10.1"
log = "0.4"
log4rs = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[[bin]]
name = "publisher"
path = "src/bin/publisher.rs"

[[bin]]
name = "subscriber"
path = "src/bin/subscriber.rs"